tests/idris2/reflection/reflection005/expected
1/1: Building refdecl (refdecl.idr)
Error: While processing right hand side of bad. When unifying:
    Elab ()
and:
    Elab a
Mismatch between: () and a.

refdecl:13:16--13:29
 09 |
 10 | %runElab mkDecls `(94)
 11 |
 12 | bad : a
 13 | bad = %runElab mkDecls `(94)
                     ^^^^^^^^^^^^^

Main> 9400
Main> Bye for now!
